# template-project-qt6

./: .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: grpc-proto-gen.cmake  vcpkg.cmake
cmake/custom-triplets/: x64-windows-mixed.cmake
cmake/fetch/: FramelessHelper.cmake  ads.cmake  json.cmake  template-gen.cmake
cmake/functions/: qt_translation_support.cmake
example/: CMakeLists.txt
example/scam_simple/: CMakeLists.txt
example/scam_simple/resources/: resources.aps  resources.qrc
example/scam_simple/src/: main.cpp  widget.cpp  widget.h
example/scam_simple/src/shared/: log.cpp  settings.cpp
